# dialogger

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/sql/: schema.sql
src-tauri/src/: db.rs  dialogue_prompt.json  gemini.rs  lib.rs
src/components/: DialogueLine.css  DialogueLine.tsx  Menu.css  Menu.tsx  TitleBar.css  TitleBar.tsx
src/layouts/: AppLayout.css  AppLayout.tsx
src/pages/: Dialogue.css  Dialogue.tsx  Home.css  Home.tsx  Settings.css  Settings.tsx
